--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age Calculator App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="calculator">
+            <h1>Javascript Age Calculator</h1>
+        </div>
+    </div>
 </body>
 
 </html>
