--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <h1>Javascript <br> <span>Age Calculator </span></h1>
             <div class="input-box">
                 <input type="date" id="date">
-                <button>Calculator</button>
+                <button>Calculate</button>
             </div>
         </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 
 </html>
