--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Javascript <br> <span>Age Calculator </span></h1>
             <div class="input-box">
                 <input type="date" id="date">
-                <button>Calculate</button>
+                <button onclick="calculateAge()">Calculate</button>
             </div>
         </div>
     </div>
